--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
         <li>
           <h2 class="task-category">CSS Tasks</h2>
           <ul>
-            <li><a href="CSS\CssTask1.html">Task 1</a></li>
-            <li><a href="CSS\CssTask1.css">Task 1</a></li>
-            <li><a href="CSS\CssTask2.html">Task 2</a></li>
-            <li><a href="CSS\CssTask2.css">Task 1</a></li>
-            <li><a href="CSS\CssTask3.html">Task 3</a></li>
-            <li><a href="CSS\CssTask3.css">Task 1</a></li>
-            <li><a href="CSS\CssTask4.html">Task 4</a></li>
-            <li><a href="CSS\CssTask4.css">Task 1</a></li>
-            <li><a href="CSS\CssTask5.html">Task 5</a></li>
-            <li><a href="CSS\CssTask5.css">Task 1</a></li>
-            <li><a href="CSS\CssTask6.html">Task 6</a></li>
-            <li><a href="CSS\CssTask6.css">Task 1</a></li>
-            <li><a href="CSS\CssTask7.html">Task 7</a></li>
-            <li><a href="CSS\CssTask7.css">Task 1</a></li>
+            <li><a href="CSS\CssTask1.html">Task 1 HTML</a></li>
+            <li><a href="CSS\CssTask1.css">Task 1 CSS</a></li>
+            <li><a href="CSS\CssTask2.html">Task 2 HTML</a></li>
+            <li><a href="CSS\CssTask2.css">Task 2 CSS</a></li>
+            <li><a href="CSS\CssTask3.html">Task 3 HTML</a></li>
+            <li><a href="CSS\CssTask3.css">Task 3 CSS</a></li>
+            <li><a href="CSS\CssTask4.html">Task 4 HTML</a></li>
+            <li><a href="CSS\CssTask4.css">Task 4 CSS</a></li>
+            <li><a href="CSS\CssTask5.html">Task 5 HTML</a></li>
+            <li><a href="CSS\CssTask5.css">Task 5 CSS</a></li>
+            <li><a href="CSS\CssTask6.html">Task 6 HTML</a></li>
+            <li><a href="CSS\CssTask6.css">Task 6 CSS</a></li>
+            <li><a href="CSS\CssTask7.html">Task 7 HTML</a></li>
+            <li><a href="CSS\CssTask7.css">Task 7 CSS</a></li>
           </ul>
         </li>
         <li>
