--- a/index.html
+++ b/index.html
@@ -100,25 +100,25 @@
         <li>
           <h2 class="task-category">Bootstrap Tasks</h2>
           <ul>
-            <li><a href="#">Task 1</a></li>
-            <li><a href="#">Task 2</a></li>
-            <li><a href="#">Task 3</a></li>
-            <li><a href="#">Task 4</a></li>
-            <li><a href="#">Task 5</a></li>
-            <li><a href="#">Task 6</a></li>
+            <li><a href="Bootstrap\bstask1.html">Task 1</a></li>
+            <li><a href="Bootstrap\bstask2.html">Task 2</a></li>
+            <li><a href="Bootstrap\bstask3.html">Task 3</a></li>
+            <li><a href="Bootstrap\bstask4.html">Task 4</a></li>
+            <li><a href="Bootstrap\bstask5.html">Task 5</a></li>
+            <li><a href="Bootstrap\bstask6.html">Task 6</a></li>
           </ul>
         </li>
         <li>
           <h2 class="task-category">JavaScript Tasks</h2>
           <ul>
-            <li><a href="#">Task 1</a></li>
-            <li><a href="#">Task 2</a></li>
-            <li><a href="#">Task 3</a></li>
-            <li><a href="#">Task 4</a></li>
-            <li><a href="#">Task 5</a></li>
-            <li><a href="#">Task 6</a></li>
-            <li><a href="#">Task 7</a></li>
-            <li><a href="#">Task 8</a></li>
+            <li><a href="Javascript\jstask1.html">Task 1</a></li>
+            <li><a href="Javascript\jstask2.html">Task 2</a></li>
+            <li><a href="Javascript\jstask3.html">Task 3</a></li>
+            <li><a href="Javascript\jstask4.html">Task 4</a></li>
+            <li><a href="Javascript\jstask5.html">Task 5</a></li>
+            <li><a href="Javascript\jstask6.html">Task 6</a></li>
+            <li><a href="Javascript\jstask7.html">Task 7</a></li>
+            <li><a href="Javascript\jstask8.html">Task 8</a></li>
           </ul>
         </li>
       </ul>
